display contents of notes.txt below track list

--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -287,6 +287,15 @@ body {
 	display: inline-block;
 }
 
+.dir__notes {
+	font-family: monospace;
+	border: 2px solid rgba(0,0,0,1);
+	border-radius: .25em;
+	padding: .5em;
+	background: rgba(0,0,0,.25);
+	color: hsl(0, 0%, 75%);
+}
+
 /* Side menu ******************************************************************/
 
 .top-right__menu {
