--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -29,7 +29,7 @@ body {
 	left: 0;
 	bottom: 0;
 	right: 0;
-	background-color: rgba(0, 0, 0, .5);
+	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 99;
 }
 
@@ -43,10 +43,10 @@ body {
 }
 
 .dialog {
-	padding: .75rem;
+	padding: 0.75rem;
 	min-width: 15rem;
-	box-shadow: 0px 0px 1.5rem rgba(0,0,0,.5);
-	border-radius: .25rem;
+	box-shadow: 0px 0px 1.5rem rgba(0, 0, 0, 0.5);
+	border-radius: 0.25rem;
 }
 
 /* UI elements ****************************************************************/
@@ -57,32 +57,32 @@ body {
 }
 
 .ui__table {
-	border-spacing: .5em;
+	border-spacing: 0.5em;
 }
 
 .ui__button {
 	display: block;
-	padding: .5em;
-	margin: .5em;
+	padding: 0.5em;
+	margin: 0.5em;
 	width: calc(100% - 1em);
 	border: 1px solid;
-	border-radius: .25em;
-	background-color: rgba(0,0,0,.15);
-	border-color: rgba(0,0,0,.54);
+	border-radius: 0.25em;
+	background-color: rgba(0, 0, 0, 0.15);
+	border-color: rgba(0, 0, 0, 0.54);
 }
 .ui__button:hover {
-	background-color: rgba(255,255,255,.5);
+	background-color: rgba(255, 255, 255, 0.5);
 }
 .ui__button:active {
 	background-color: white;
 }
 
 .ui__section-header {
-	box-shadow: 0px 4px 2px -2px rgba(0,0,0,.25);
-	padding-bottom: .1em;
+	box-shadow: 0px 4px 2px -2px rgba(0, 0, 0, 0.25);
+	padding-bottom: 0.1em;
 }
 .ui__section-body {
-	margin: .5em 0 .5em 1.5em;
+	margin: 0.5em 0 0.5em 1.5em;
 }
 .ui__section-body--scroll {
 	max-height: 8em;
@@ -136,9 +136,9 @@ body {
 	cursor: pointer;
 	flex: 1;
 	position: relative;
-	height: .5rem;
+	height: 0.5rem;
 	box-shadow: inset 0 0 3px black;
-	margin: 0 .5rem;
+	margin: 0 0.5rem;
 }
 .controls--disabled .controls__progress-trough {
 	cursor: default;
@@ -151,7 +151,7 @@ body {
 	left: 0;
 	width: 0;
 	height: 100%;
-	background-color: rgba(0,0,0,.27);
+	background-color: rgba(0, 0, 0, 0.27);
 }
 
 .controls__slider-range {
@@ -188,7 +188,7 @@ body {
 .controls__marquee-spacer {
 	position: relative;
 	height: 1.1em;
-	margin: 0 .5rem 0 .5rem;
+	margin: 0 0.5rem 0 0.5rem;
 }
 .controls__marquee-container {
 	position: absolute;
@@ -216,18 +216,18 @@ body {
 }
 .controls__group--shift-up {
 	position: relative;
-	bottom: .5em;
+	bottom: 0.5em;
 }
 
 .controls__bottom-left {
 	position: absolute;
-	bottom: .5rem;
-	left: .5rem;
+	bottom: 0.5rem;
+	left: 0.5rem;
 }
 .controls__bottom-right {
 	position: absolute;
-	bottom: .5rem;
-	right: .5rem;
+	bottom: 0.5rem;
+	right: 0.5rem;
 }
 
 /* Directory listing **********************************************************/
@@ -248,13 +248,13 @@ body {
 	color: hsl(39, 100%, 93%);
 }
 .dir__link:hover {
-	box-shadow: 0 1px rgba(0,0,0,.54);
+	box-shadow: 0 1px rgba(0, 0, 0, 0.54);
 }
 
 .dir__icon {
 	color: black;
 	font-size: 24px;
-	margin-right: .25em;
+	margin-right: 0.25em;
 }
 .dir__icon--playing {
 	display: none;
@@ -262,7 +262,7 @@ body {
 }
 
 .dir__link--aux {
-	margin-left: .5em;
+	margin-left: 0.5em;
 	font-style: italic;
 }
 
@@ -283,7 +283,7 @@ body {
 	z-index: 1;
 	right: 0;
 	top: 0;
-	margin: .5rem;
+	margin: 0.5rem;
 	display: flex;
 	flex-direction: column;
 }
@@ -293,5 +293,5 @@ body {
 .menu__button {
 	cursor: pointer;
 	font-size: 3rem;
-	color: rgba(0,0,0,.54);
+	color: rgba(0, 0, 0, 0.54);
 }
