--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -5,7 +5,7 @@
 	transform: translateX(-50%);
 	width: 100%;
 	max-width: 1200px;
-	box-shadow: 0px 0px 1rem rgba(0,0,0,.5);
+	box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.5);
 }
 
 .main__dir {
@@ -17,13 +17,10 @@
 
 #about-dialog:before {
 	content: "";
-	background:
-		center center / contain url("/static/img/aurelius.svgz") no-repeat,
-		linear-gradient(
-			hsl(39, 8%, 43%) 50%,
-			hsl(39, 8%, 30%));
-	border-radius: .5rem;
-	box-shadow: inset 0 0 1rem 0rem rgba(0,0,0,.5);
+	background: center center / contain url("/static/img/aurelius.svgz") no-repeat,
+		linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
+	border-radius: 0.5rem;
+	box-shadow: inset 0 0 1rem 0rem rgba(0, 0, 0, 0.5);
 	display: block;
 	min-width: 10rem;
 	max-width: 16rem;
@@ -33,44 +30,44 @@
 
 @media (min-width: 960px) {
 	body {
-		background:
-			center top / calc(960px + 2rem) fixed no-repeat linear-gradient(
-				hsl(39, 8%, 43%) 50%,
-				hsl(39, 8%, 30%)),
-			left top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
-				to right,
-				rgba(0,0,0,.25) calc(100% - 150px),
-				rgba(0,0,0,.35) 100%),
-			right top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
-				to left,
-				rgba(0,0,0,.25) calc(100% - 150px),
-				rgba(0,0,0,.35) 100%),
+		background: center top / calc(960px + 2rem) fixed no-repeat
+				linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%)),
+			left top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat
+				linear-gradient(
+					to right,
+					rgba(0, 0, 0, 0.25) calc(100% - 150px),
+					rgba(0, 0, 0, 0.35) 100%
+				),
+			right top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat
+				linear-gradient(
+					to left,
+					rgba(0, 0, 0, 0.25) calc(100% - 150px),
+					rgba(0, 0, 0, 0.35) 100%
+				),
 			fixed url("/static/img/bg.svgz"),
-			fixed linear-gradient(
-				hsl(39, 8%, 43%) 50%,
-				hsl(39, 8%, 30%));
+			fixed linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
 	}
 }
 
 /* Prevent centered content from shifting when scrollbar appears */
 @media (min-width: 1200px) {
 	body {
-		background:
-			calc(50vw - (960px + 2rem) / 2) top / calc(960px + 2rem) fixed no-repeat linear-gradient(
-				hsl(39, 8%, 43%) 50%,
-				hsl(39, 8%, 30%)),
-			left top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
-				to right,
-				rgba(0,0,0,.25) calc(100% - 150px),
-				rgba(0,0,0,.35) 100%),
-			right top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
-				to left,
-				rgba(0,0,0,.25) calc(100% - 150px),
-				rgba(0,0,0,.35) 100%),
+		background: calc(50vw - (960px + 2rem) / 2) top / calc(960px + 2rem) fixed no-repeat
+				linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%)),
+			left top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
+				linear-gradient(
+					to right,
+					rgba(0, 0, 0, 0.25) calc(100% - 150px),
+					rgba(0, 0, 0, 0.35) 100%
+				),
+			right top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
+				linear-gradient(
+					to left,
+					rgba(0, 0, 0, 0.25) calc(100% - 150px),
+					rgba(0, 0, 0, 0.35) 100%
+				),
 			fixed url("/static/img/bg.svgz"),
-			fixed linear-gradient(
-				hsl(39, 8%, 43%) 50%,
-				hsl(39, 8%, 30%));
+			fixed linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
 	}
 
 	html {
@@ -88,12 +85,12 @@
 		bottom: inherit;
 		top: 0;
 	}
-	
+
 	.main__dir {
 		margin-bottom: inherit;
 		margin-top: 8rem;
 	}
-	
+
 	.top-right__menu {
 		top: inherit;
 		bottom: 0;
