--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -5,7 +5,7 @@
 	transform: translateX(-50%);
 	width: 100%;
 	max-width: 1200px;
-	box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.75);
 }
 
 .main__dir {
@@ -15,10 +15,15 @@
 	margin-bottom: 8rem;
 }
 
+#unfavorite-button {
+	color: hsl(0, 70%, 72.9%);
+}
+
 #about-dialog:before {
 	content: "";
-	background: center center / contain url("/static/img/aurelius.svgz") no-repeat,
-		linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
+	background:
+		center center / contain url("/static/img/aurelius.svgz") no-repeat,
+		linear-gradient(hsl(240, 2%, 22%) 50%, hsl(240, 2%, 15%));
 	border-radius: 0.5rem;
 	box-shadow: inset 0 0 1rem 0rem rgba(0, 0, 0, 0.5);
 	display: block;
@@ -28,32 +33,14 @@
 	margin: 1rem auto;
 }
 
-@media (min-width: 960px) {
-	body {
-		background: center top / calc(960px + 2rem) fixed no-repeat
-				linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%)),
-			left top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat
-				linear-gradient(
-					to right,
-					rgba(0, 0, 0, 0.25) calc(100% - 150px),
-					rgba(0, 0, 0, 0.35) 100%
-				),
-			right top / calc((100% - (960px + 2rem)) / 2) fixed no-repeat
-				linear-gradient(
-					to left,
-					rgba(0, 0, 0, 0.25) calc(100% - 150px),
-					rgba(0, 0, 0, 0.35) 100%
-				),
-			fixed url("/static/img/bg.svgz"),
-			fixed linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
-	}
+body {
+	background: hsl(39, 0%, 11.8%);
 }
 
-/* Prevent centered content from shifting when scrollbar appears */
-@media (min-width: 1200px) {
+@media (min-width: 960px) {
 	body {
 		background: calc(50vw - (960px + 2rem) / 2) top / calc(960px + 2rem) fixed no-repeat
-				linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%)),
+				linear-gradient(hsl(39, 0%, 11.8%) 50%, hsl(39, 0%, 11.8%)),
 			left top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
 				linear-gradient(
 					to right,
@@ -67,7 +54,29 @@
 					rgba(0, 0, 0, 0.35) 100%
 				),
 			fixed url("/static/img/bg.svgz"),
-			fixed linear-gradient(hsl(39, 8%, 43%) 50%, hsl(39, 8%, 30%));
+			fixed linear-gradient(hsl(240, 2%, 30%) 50%, hsl(240, 2%, 20%));
+	}
+}
+
+/* Prevent centered content from shifting when scrollbar appears */
+@media (min-width: 1200px) {
+	body {
+		background: calc(50vw - (960px + 2rem) / 2) top / calc(960px + 2rem) fixed no-repeat
+				linear-gradient(hsl(39, 0%, 11.8%) 50%, hsl(39, 0%, 11.8%)),
+			left top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
+				linear-gradient(
+					to right,
+					rgba(0, 0, 0, 0.25) calc(100% - 150px),
+					rgba(0, 0, 0, 0.35) 100%
+				),
+			right top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat
+				linear-gradient(
+					to left,
+					rgba(0, 0, 0, 0.25) calc(100% - 150px),
+					rgba(0, 0, 0, 0.35) 100%
+				),
+			fixed url("/static/img/bg.svgz"),
+			fixed linear-gradient(hsl(240, 2%, 30%) 50%, hsl(240, 2%, 20%));
 	}
 
 	html {
