add fallback fonts

--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -8,7 +8,7 @@ body {
 		fixed url("/static/img/bg.svgz"),
 		fixed linear-gradient(hsl(240, 2%, 22%) 50%, hsl(240, 2%, 15%));
 	color: white;
-	font-family: segoe ui;
+	font-family: segoe ui, roboto, sans-serif;
 }
 
 .hidden {
