Fix aspect ratio of track images.

--- a/cmd/aurelius/assets/static/css/base.css
+++ b/cmd/aurelius/assets/static/css/base.css
@@ -137,6 +137,7 @@ body {
 	height: 6rem;
 	width: 6rem;
 	margin: 0.5rem;
+	object-fit: cover;
 }
 
 /* Controls to the right of the track image */
